--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" type="image/x-icon" href="/elyas.ico">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Elyas Abate Protofolio</title>
   </head>
